<resources>
    <string name="app_name">SmartAlarm</string>
    <string name="pref_enable_all_label">Enable SmartAlarm</string>
    <string name="pref_latitude_key" translatable="false">latitude</string>
    <string name="pref_longitude_key" translatable="false">longitude</string>
    <string name="pref_address_key" translatable="false">address</string>
    <string name="pref_place_label0">Initial Checkpoint</string>
    <string name="pref_place_label1">Final Checkpoint</string>
    <string name="pref_alarm_label">Next Alarm</string>
    <string name="pref_alarm_time_label">Alarm Time</string>
    <string name="pref_delay_ratio">Delay Ratio Threshold</string>
    <string name="pref_current_traffic">Current Traffic</string>
    <string name="pref_auto_dismiss_label">Auto-Dismiss Mode</string>

    <string name="title_activity_alarm">Smart Alarm</string>
    <string name="dismiss_alarm_button">Dismiss</string>
    <string name="alarm_content">WAKE UP!</string>
</resources>
